src/styles/Navbar/Navbar.module.css
#navbar {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 4.5rem;
  font-family: "urbanist", sans-serif;
}

#logo {
  margin: 0 2rem;
}

#logoMobile {
  margin: 0 auto 0 1rem;
}

#logo,
#logoMobile {
  color: blue;
  font-size: var(--fs-h1);
}

.mainNav {
  display: flex;
  font-size: var(--fs-nav);
}

.mainNavigation a,
.mainNavLstOpened a {
  text-decoration: none;
}

.mainNavLnkBox {
  display: flex;
  align-items: center;
  margin: 0 1rem;
  color: white;
  padding: 0 1rem;
}

.mainNavLnkBox:hover {
  font-weight: bold;
}

.rightContainer {
  display: flex;
}

#yourOrdersBtn {
  font-family: var(--primary-font);
  margin-right: 1rem;
  color: white;
  background-color: blue;
  border: 0;
  border-radius: 5rem;
  padding: 0.5rem;
  font-size: var(--fs-nav);
  cursor: pointer;
}

#yourOrdersBtn:hover {
  background-color: dodgerblue;
}

/* mobile menu */

.mainNavMenuMobile {
  display: flex;
}

.mainNavLstClosed {
  position: absolute;
  transform: translateX(-100%);
  padding: 0.5rem;
  height: 100vh;
}

.mainNavLstOpened {
  position: absolute;
  top: 0;
  background-color: black;
  z-index: 1;
  border-radius: 0.4rem;
  background-color: rgb(75, 75, 75);
  transform: translateX(0);
  transition: transform 0.3s ease;
  padding: 0.5rem;
  height: 100vh;
}

.mainNavLnkBoxMobile {
  display: flex;
  align-items: center;
  margin: 0 1rem;
  color: white;
  padding: 0 1rem;
  min-width: 25vw;
}

.OpenMenuIconBox {
  margin-left: 1rem;
}

.closeMenuIconBox {
  display: flex;
  justify-content: flex-end;
  margin: 0.5rem;
}

